public2/css/module.css
/* ... */
/* ios chat styles */

/* texter account info */
.texter {
    background: #F5F5F5;
    width: 328px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-bottom: 2px solid #D4D4D4;
    text-align: center;
}

.texter i.user.circle.big.icon {
    color: #9397A2
}

.texter p { 
    font-size: 1rem;
    font-weight: bold;
}

.texter p span {
    color: grey;
    font-weight: normal;
}

.ios-time {
    width: 328px;
    text-align: center;
    font-size: 0.9rem;
    padding-top: 20px;
}

/* Source: https://codepen.io/swards/pen/gxQmbj */
  .ios-chat-container {
    font-family: helvetica;
    display: flex ;
    flex-direction: column;
    align-items: center;
  }

  .chat {
    width: 329px;
    /* border: solid 1px #EEE; */
    display: flex;
    flex-direction: column;
    padding: 10px;
    /* background-color: red; */
    margin-left: -30px;
  }
  
  .messages {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
  }

  .messages:first-child {
    margin-top: 0px;
  }
  
  .message {
    border-radius: 20px;
    padding: 8px 15px;
    margin-top: 5px;
    margin-bottom: 5px;
    display: inline-block;
    line-height: 1.1; 

  }
  
  .yours {
    align-items: flex-start;
  }
  
  .yours .message {
    margin-right: 25%;
    background-color: #E6E5EB;
    position: relative;
  }
  
  .yours .message.last:before {
    content: "";
    position: absolute;
    z-index: 0;
    bottom: 0;
    left: -7px;
    height: 20px;
    width: 20px;
    background: #E6E5EB;
    border-bottom-right-radius: 15px;
  }
  .yours .message.last:after {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: 0;
    left: -10px;
    width: 10px;
    height: 20px;
    background: white;
    border-bottom-right-radius: 10px;
  }
  
  .mine {
    align-items: flex-end;
  }
  
  .mine .message {
    color: white;
    margin-left: 25%;
    background: linear-gradient(to bottom, #00D0EA 0%, #2165AE 100%);
    background-attachment: fixed;
    position: relative;
  }
  
  .mine .message.last:before {
    content: "";
    position: absolute;
    z-index: 0;
    bottom: 0;
    right: -8px;
    height: 20px;
    width: 20px;
    background: linear-gradient(to bottom, #00D0EA 0%, #2165AE 100%);
    background-attachment: fixed;
    border-bottom-left-radius: 15px;
  }
  
  .mine .message.last:after {
    content: "";
    position: absolute;
    z-index: 1;
    bottom: 0;
    right: -9px;
    width: 9px;
    height: 21px;
    background: white;
    border-bottom-left-radius: 10px;
  }

.message.last {
    /* background-color: red; */
    width: 280px;
}
  

  /* Source: https://www.w3schools.com/howto/howto_css_devices.asp */

  .smartphone {
    position: relative;
    width: 360px;
    height: 640px;
    margin: auto;
    border: 16px black solid;
    border-top-width: 60px;
    border-bottom-width: 60px;
    border-radius: 36px;
  }
  
  /* The horizontal line on the top of the device */
  .smartphone:before {
    content: '';
    display: block;
    width: 60px;
    height: 5px;
    position: absolute;
    top: -30px;
    left: 50%;
    transform: translate(-50%, -50%);
    background: #333;
    border-radius: 10px;
  }
  
  /* The circle on the bottom of the device */
  .smartphone:after {
    content: '';
    display: block;
    width: 35px;
    height: 35px;
    position: absolute;
    left: 50%;
    bottom: -65px;
    transform: translate(-50%, -50%);
    background: #333;
    border-radius: 50%;
  }
  
  /* The screen (or content) of the device */
  .smartphone .content {
    width: 360px;
    height: 640px;
    /* background: white; */
  }
  


  /* submod 2 q1.html partial */
.make-italic {
    font-style: italic;
}
.selected-customers {
    font-weight: bold;
}

.htmlImage .dollar-tree-border .green {
    color: #589E3C;
    font-weight: bold;
}

.htmlImage .dollar-tree-border {
    border: 6px solid #589E3C;
    margin: 10px;
    border-radius: 15px; 
}



.htmlImage #confirmButton {
    background-color: #589E3C;
    color: white;
    border-radius: 15px; 
    width: 400px;
    pointer-events: none;
}

.htmlImage #netflix-logo {
    width: 200px;
    display: block;
    margin: 0 auto;
}

.htmlImage #netflixSignIn {
    color: #E50914;
}

